src/test/ui-fulldeps/fluent-messages/test.stderr
error: could not open Fluent resource
  --> $DIR/test.rs:25:29
   |
LL |         missing_absolute => "/definitely_does_not_exist.ftl",
   |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: os-specific message

error: could not open Fluent resource
  --> $DIR/test.rs:34:29
   |
LL |         missing_relative => "../definitely_does_not_exist.ftl",
   |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: os-specific message

error: could not parse Fluent resource
  --> $DIR/test.rs:43:28
   |
LL |         missing_message => "./missing-message.ftl",
   |                            ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: see additional errors emitted

error: expected a message field for "missing_message"
 --> ./missing-message.ftl:1:1
  |
1 | missing_message =
  | ^^^^^^^^^^^^^^^^^
  |

error: overrides existing message: `key`
  --> $DIR/test.rs:53:9
   |
LL |         b => "./duplicate-b.ftl",
   |         ^
   |
help: previously defined in this resource
  --> $DIR/test.rs:52:9
   |
LL |         a => "./duplicate-a.ftl",
   |         ^

error: name `this-slug-has-hyphens` contains a '-' character
  --> $DIR/test.rs:62:9
   |
LL |         slug_with_hyphens => "./slug-with-hyphens.ftl",
   |         ^^^^^^^^^^^^^^^^^
   |
   = help: replace any '-'s with '_'s

error: attribute `label-has-hyphens` contains a '-' character
  --> $DIR/test.rs:71:9
   |
LL |         label_with_hyphens => "./label-with-hyphens.ftl",
   |         ^^^^^^^^^^^^^^^^^^
   |
   = help: replace any '-'s with '_'s

error: aborting due to 6 previous errors

